# ChangeLog for dev-java/oracle-jdk-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/oracle-jdk-bin/ChangeLog,v 1.58 2014/04/17 08:15:18 ago Exp $

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
  -oracle-jdk-bin-1.7.0.51-r1.ebuild:
  Remove old

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.55.ebuild:
  Stable for x86, wrt bug #507798

  17 Apr 2014; Agostino Sarubbo <ago@gentoo.org> oracle-jdk-bin-1.7.0.55.ebuild:
  Stable for amd64, wrt bug #507798

*oracle-jdk-bin-1.8.0.5 (16 Apr 2014)
*oracle-jdk-bin-1.7.0.55 (16 Apr 2014)

  16 Apr 2014; Tom Wijsman <TomWij@gentoo.org> +oracle-jdk-bin-1.7.0.55.ebuild,
  +oracle-jdk-bin-1.8.0.5.ebuild, -oracle-jdk-bin-1.8.0.0.ebuild,
  oracle-jdk-bin-1.7.0.51-r1.ebuild:
  Security version bumps to 1.7.0.55 and 1.8.0.5; fixes bug #507776 and bug
  #507798, removed unstable versions from 1.7.0.51-r1, pending stabilization of
  1.7.0.55.

*oracle-jdk-bin-1.8.0.0 (28 Mar 2014)

  28 Mar 2014; Tom Wijsman <TomWij@gentoo.org> +files/oracle-jdk-bin-1.8.env,
  +oracle-jdk-bin-1.8.0.0.ebuild:
  Version bump to 1.8.0.0; for bug #505040, reported by wevrn5, contribution by
  Krzysztof Miksa, reviewed and adjusted.

  26 Jan 2014; Ralph Sennhauser <sera@gentoo.org>
  -oracle-jdk-bin-1.7.0.45.ebuild:
  Remove vulnarable

  25 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  oracle-jdk-bin-1.7.0.51-r1.ebuild:
  Stable for x86, wrt bug #498148

  25 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  oracle-jdk-bin-1.7.0.51-r1.ebuild:
  Stable for amd64, wrt bug #498148

*oracle-jdk-bin-1.7.0.51-r1 (19 Jan 2014)

  19 Jan 2014; Lars Wendler <polynomial-c@gentoo.org>
  -oracle-jdk-bin-1.7.0.51.ebuild, +oracle-jdk-bin-1.7.0.51-r1.ebuild:
  Forgot to change java_fx version.

*oracle-jdk-bin-1.7.0.51 (17 Jan 2014)

  17 Jan 2014; Lars Wendler <polynomial-c@gentoo.org>
  +oracle-jdk-bin-1.7.0.51.ebuild: