@@ -36,23 +36,13 @@ DIST jdk-8u5-solaris-sparcv9.tar.gz 100180279 SHA256 22b5f8e476376229a29f376e2de
 DIST jdk-8u5-solaris-x64-demos.tar.gz 8643049 SHA256 c9355b5ff54a0c84213d2ca524dcf6c163b176c099ddd0b3658709d863b14ff5 SHA512 30463fb317152b2239ca75a0c840deaeee6600a72753817a8d0f613b2845a5bd7912ce4d47df0f9ff746ecb64a20eac39b4470b7721df65ca612c61873777320 WHIRLPOOL a041e73f6e41e7f6c5a59fb1dd55c45cabc10d98b0ebbdf2635f78d2c747dea87cfb903234f1333b8248e4ee1f4d5a1e5fb3240e6ab6d7e97f8ea2d2b7854bcd
 DIST jdk-8u5-solaris-x64.tar.gz 97716860 SHA256 fa8138a46d82b2dad2b17a57ecf30fe59eb15a1482a07852a2a60a9f63da7538 SHA512 5e05a59f0a205c9f6ff0d0ab507d930e45f15418018ef1bad7d3d0d7626a0f12bdc8f5c83d80a4b0f1f755c32d92b81e69552cbfdb869d05ab82bda9fdfd9971 WHIRLPOOL a3741c2684780876e44fcdd9c977062db34137f4708aa9b0a7c23e3b07297455ece69d96564de29ad44d1a5440599b07107f05008c6841f302a9605ae4944400
 EBUILD oracle-jdk-bin-1.7.0.55.ebuild 10003 SHA256 dda7c59e181fa88a24e8ca606fbf57a268b45be204f0444533e16d8d5248d7f3 SHA512 bbe65954c04a7e2e4ebc6005cbd1f6928e83a3b6bb98039033327598bb3e12003336d3cf535d125107c3c50bfd70731a984a4cd8b673bf440acb0f87c2a03213 WHIRLPOOL f7dfd8b0bd298649a52e5f11bff718b698c042255e308d24519acc58b9234ef37e82e1b34620f361d2c9aad1c82aa82fde44ea9b668e9026985ee0af7b1c6011
-EBUILD oracle-jdk-bin-1.8.0.5.ebuild 9759 SHA256 f570f08a3388b65b4a4fcfe00ad1a5aac488e945129c3b5686781e401a641031 SHA512 4b196b758ccb82ffb0e084f4a5317e1a762997262268df3a50d4ce0410208e13692e1eb5938a60962571b71699d5333438afabd061a43bdc45182f8b87169e29 WHIRLPOOL ac14bf7cbaf8a2c0fae8804c3f746b62e467d29a66f32a8c3f17d8f9f199f5d0e19543981497adf9b650fa3bce7eddcca59abc5621c2bae8b8f87a100e57b7ac
-MISC ChangeLog 10577 SHA256 3c96185a2b67f44bde4e5c6d2e60a98953ac3192739c005826df7f659db2947b SHA512 52d07bc4ed3ae9dc51834b0dc7c95a4dab2559161f770354ed000e356f823904d379e88f8ba2afa6d2566c1000b7aa300e24dc89a1afd280dc8f46e6b947bc61 WHIRLPOOL a7f9ed1290ad6090def71e93385b5e6bb0da6f1fe37ca39e1b55040906b4a85d6feb99cc96c0bd6b57db5e5e5d9f5e95722b0c27a19010a0f34852969d897144
+EBUILD oracle-jdk-bin-1.8.0.5.ebuild 9855 SHA256 0a5c93c52813f395191b2bee8b05ec1bfa8e3b5285823b49b8a9264528793e27 SHA512 15ec250d6232d6f294a208ee0a242efee1ffef77672a395e5c1ae1d66fd40fbd9d094dfde6be1adc6dd8e62d7f744a8f055be6cb3f8a218b7c2a558250c01ed8 WHIRLPOOL fbb973daae5fe282e237a059138852540ff784e707ce62d9a9d65beae97d869da6f5808fc4ac41fc9c4472e465e14d7880bb491a13f29c16633381d11664f47c
+MISC ChangeLog 10707 SHA256 b66f4096b689864269ea8faa83a4e6b9bc28e5fc6494d5c850cea2d708452073 SHA512 a7e8beaccae257beb6e47613c3180dc5f103fac8cce933f520bdee92ec4a9282be7eee446fe04565f571910cf9ecdd96f843009e3f355bec4e1dd818981ec0d3 WHIRLPOOL 3ce9d569aa2e10393bac69612ae740dfaae66ad4f7eb6a800635dedfd9fecb78ce3771798d7eaf6151d4ecfecb0a287c81872a79244083987b3f60651a9729b2
 MISC metadata.xml 519 SHA256 09f12b427ac321fdbb2a0ae4d54259bf2fea4100abe33062bd65f27364ccf30e SHA512 b9d20b3da530304f3b9996411a7a6df83e60645057aef2c6706534ff238889e7ae771fd42ff37fef797df50033ec14edc594450fce73144f5c05d31c57e2ce7e WHIRLPOOL 2a5251448873eb66f624d227e3b203b74ab5f92672390478d5b36120181982a004af801e98008fdd701f15cfc53bd74334a82fa8f519c727791b4b29920510aa
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0.22 (SunOS)
 
-iQIcBAEBCAAGBQJTT42XAAoJELp701BxlEWf7JwP/RdB7u856JSnFdY46AhXzjGv
-OW3vloW/ed88D5AH5//WHb3c4lyJpXok3BVFD7qRO9ebwTYANjMVydmmc2tSIpo4
-DApLo9GThrfqW6svMBkaslMsRqWNWBsSiw8Srt2IgH4bmGWpc/eFF/lLTV0DV1nj
-UAPfntcPkBemUyXknFxi6RouVxxdyzJYbhNeEtVXSm3TRukf8hSPGYRn9vAV6bPy
-SKZxCTtBJZ0SY2KbthsBFG9legzYmkmPGeSR+T5idVMqrgzCBUEGRZKxR8Jnffcb
-6mqFTI1/5i7yxCWqqp+euCqWBjgwKfyjBs26TL2oZUTOwY23LE7U/iKHazVn/Lsl
-y+sBtUKMXaXqNMp4DPrtyPpVmTW3lglomg9xW/NnVlnKIIyy2SoVg8EVpBML3KmV
-C7TDXPKouzeBPU/Cfs1dDQ3pHfulRL0uzdRziYLM1JlMAKDvP+yirgpfmlBA6b10
-DzTAa26IDmDJQyNJl9S9u1EhxfHmDqiR4MOvR5l4YT8KFGnY5AU4/K9xoti3ZSSG
-HELqm0SVQbx276TKuqlMBzHdmwfhq+DLKuRbDcfDEIfL1StzpEicL/q4zEGmWJL0
-Un+Iv7LtBolf567yx9xx/A4RFqEY3NFXpW2vZwWj0EPe17rNJKSPuIDbt41/wVnd
-6Y/W3G4hH5Muy7dYrKkD
-=p/UB
+iEYEAREIAAYFAlNes5AACgkQX3X2B8XHTonQSQCePpJ2xpmQfy2q+9BeOfzlmd/H
+/eAAn2fmtcG6s8mGAUZOFC6fgSLjdHl+
+=e1Xz
 -----END PGP SIGNATURE-----
