@@ -11,4 +11,4 @@ RESTRICT=fetch strip
 SLOT=1.8
 SRC_URI=amd64? ( jdk-8u5-linux-x64.tar.gz examples? ( jdk-8u5-linux-x64-demos.tar.gz ) ) x86? ( jdk-8u5-linux-i586.tar.gz examples? ( jdk-8u5-linux-i586-demos.tar.gz ) ) x64-solaris? ( jdk-8u5-solaris-x64.tar.gz examples? ( jdk-8u5-solaris-x64-demos.tar.gz ) ) sparc64-solaris? ( jdk-8u5-solaris-sparcv9.tar.gz examples? ( jdk-8u5-solaris-sparcv9-demos.tar.gz ) ) x86-macos? ( jdk-8u5-macosx-x64.dmg examples? ( jdk-8u5-macosx-x86_64-demos.zip ) ) x64-macos? ( jdk-8u5-macosx-x64.dmg examples? ( jdk-8u5-macosx-x86_64-demos.zip ) ) jce? ( jce_policy-8.zip )
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	java-vm-2	7dc6db7d110230640003e30e63a0b2bc	multilib	fac675dcccf94392371a6abee62d909f	pax-utils	2424f959506320f5196de8f79fa05297	prefix	21058c21ca48453d771df15500873ede	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=731a88ac0b80a5bbc09a0955336f3157
+_md5_=0c234a73192dae3f56b5249f53f63aef
